Fix alignment issue with post date on public homepage

--- a/web/static/css/public/_homepage.scss
+++ b/web/static/css/public/_homepage.scss
@@ -16,12 +16,6 @@
 	align-items: baseline;
 	justify-content: space-between;
 }
-@media screen and (max-width: 600px){
-	.post-heading{
-		flex-direction: column;
-	}
-}
-
 .post-title{
 	margin: 0;
 }
@@ -29,6 +23,16 @@
 	font-size: 0.8em;
 	text-align: right;
 	min-width: 10em;
+}
+
+@media screen and (max-width: 600px){
+	.post-heading{
+		flex-direction: column;
+	}
+	.post-date{
+		text-align: left;
+		margin-top: 0.3em;
+	}
 }
 
 .post-key-image-container{
